# JumpingCpp

./: CMakeLists.txt  DATA.yaml  actuator.cpp  actuator.h  control.cpp  control.h  cppTypes.h  cubic.h  extract_data.cpp  extract_data.h  hardware.h  homing.cpp  homing.h  hopping_for_new_robot.py  main.cpp  test.cpp  utilities.h
